[gd_scene load_steps=20 format=2]

[ext_resource path="res://models/whitehorse_full_rig.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/HorseInteractionController.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Horse.gd" type="Script" id=3]
[ext_resource path="res://prefabs/Collidable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/flannel.jpg" type="Texture" id=5]
[ext_resource path="res://Scripts/HorseParticleController.gd" type="Script" id=7]
[ext_resource path="res://Sprites/UI/RE_Plus.png" type="Texture" id=8]

[sub_resource type="CapsuleShape" id=12]
radius = 0.547664

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 0.5
flag_rotate_y = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 1, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 5.0
angular_velocity_random = 0.05
angle = 5.0

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
params_cull_mode = 2
albedo_texture = ExtResource( 8 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 0.3, 0.3 )

[sub_resource type="SphereShape" id=5]
radius = 20.0

[sub_resource type="SphereMesh" id=6]
radius = 20.0
height = 38.947

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 1, 0, 0, 0.0862745 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1.24506, 1, 2.0015 )

[sub_resource type="CubeMesh" id=9]

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
albedo_color = Color( 0, 1, 0.180392, 0.247059 )

[sub_resource type="CapsuleMesh" id=11]

[sub_resource type="CylinderShape" id=13]
radius = 0.5
height = 0.5

[node name="Horse" type="KinematicBody"]
transform = Transform( 1.66603, 0, 0, 0, 1.66603, 0, 0, 0, 1.66603, 0, 0, 0 )
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -1, -1.50996e-07, 6.60024e-15, 0, -4.37114e-08, -1, 1.50996e-07, -1, 4.37114e-08, 0, 1.097, 0 )
shape = SubResource( 12 )

[node name="Collidable" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.50817, 0, -3.25841e-07, 0, 0.610547, 0, 1.65583e-07, 0, -1, 0, 1.526, 0 )

[node name="Saddle" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.44269, 0 )

[node name="Sprite3D" type="Sprite3D" parent="Saddle"]
transform = Transform( -0.0266254, 0, 0, 0, -0.0266254, 0, 0, 0, -0.0266254, 0, 0, 0 )
visible = false
texture = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00350106, 2.44176, -2.13584 )
emitting = false
amount = 5
lifetime = 2.0
speed_scale = 2.0
randomness = 0.47
visibility_aabb = AABB( -3, -2, -3, 5, 5, 8 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )
script = ExtResource( 7 )

[node name="ParticleDurationTimer" type="Timer" parent="Particles"]
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true

[node name="full_rig_white2" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.764508, 0, 0, 0, 0.764508, 0, 0, 0, -0.764508, 0, 0, 0 )

[node name="AggroRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AggroRange"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="AggroRange"]
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="AttackPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22326, -2.19168 )

[node name="AttackHitboxTimer" type="Timer" parent="."]
wait_time = 0.45
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="HorseInteractionController" type="Area" parent="."]
script = ExtResource( 2 )
baby_threshold = 2

[node name="CollisionShape" type="CollisionShape" parent="HorseInteractionController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29411, -0.973852 )
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="HorseInteractionController"]
transform = Transform( 1.25137, 0, 0, 0, 1, 0, 0, 0, 2.04115, 0, 1.29757, -0.995812 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="TalkCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TempTalkBanTick" type="Timer" parent="."]
wait_time = 30.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.491636, 0, 0, 0, 1.05338, 0, 0, 0, 0.888916, 0, 1.05994, 0 )
visible = false
mesh = SubResource( 11 )
material/0 = null

[node name="InteractabilityTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ItemHold" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.04779, -1.78525 )

[node name="TargetBasketTimer" type="Timer" parent="."]
one_shot = true

[node name="GroundCheck" type="RayCast" parent="."]
enabled = true

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.296032, 0 )
visible = false
shape = SubResource( 13 )
disabled = true
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="Particles/ParticleDurationTimer" to="Particles" method="_on_ParticleDurationTimer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="area_entered" from="AggroRange" to="." method="_on_AggroRange_area_entered"]
[connection signal="area_exited" from="AggroRange" to="." method="_on_AggroRange_area_exited"]
[connection signal="timeout" from="AttackHitboxTimer" to="." method="_on_AttackHitboxTimer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
[connection signal="area_entered" from="HorseInteractionController" to="HorseInteractionController" method="_on_HorseInteractionController_area_entered"]
[connection signal="area_exited" from="HorseInteractionController" to="HorseInteractionController" method="_on_HorseInteractionController_area_exited"]
[connection signal="timeout" from="TalkCooldownTimer" to="." method="_on_TalkCooldownTimer_timeout"]
[connection signal="timeout" from="TempTalkBanTick" to="." method="_on_TempTalkBanTick_timeout"]
[connection signal="timeout" from="InteractabilityTimer" to="HorseInteractionController" method="_on_InteractabilityTimer_timeout"]
[connection signal="timeout" from="TargetBasketTimer" to="." method="_on_TargetBasketTimer_timeout"]
